# tridsolver

./: .gitlab-ci.yml
apps/adi/: CMakeLists.txt
apps/adi/src/: adi_cpu.cpp  adi_cuda.cu  adi_mpi.h  adi_mpi_cpu.cpp  adi_mpi_cuda.cu  adi_mpi_cuda.h  adi_orig.c  preproc_mpi.hpp  preproc_mpi_cuda.hpp
scalar/: CMakeLists.txt
scalar/include/: trid_common.h  trid_cpu.h  trid_cuda.h  trid_cuda_mpi_pcr.h  trid_mpi.h  trid_mpi_cpu.h  trid_mpi_cpu.hpp  trid_mpi_cuda.hpp  trid_mpi_decomposition.hpp  trid_mpi_solver_params.hpp  trid_simd.h
scalar/src/cpu/: CMakeLists.txt  transpose.hpp  trid_cpu.cpp  trid_mpi_cpu.cpp  trid_mpi_decomposition.hpp  trid_phi.hpp
scalar/src/cuda/: CMakeLists.txt  cuda_shfl.h  trid_cuda.cu  trid_cuda_mpi.cu  trid_cuda_mpi_pcr.cu  trid_cuda_mpi_pcr.hpp  trid_linear_mpi.hpp  trid_linear_mpi_pcr.hpp  trid_linear_mpi_reg16_float4.hpp  trid_linear_mpi_reg8_double2.hpp  trid_linear_reg16_float4.hpp  trid_linear_reg8_double2.hpp  trid_pcr_mpi.hpp  trid_pcr_mpi_communication.hpp  trid_strided_multidim.hpp  trid_strided_multidim_mpi.hpp  trid_strided_multidim_mpi_pcr.hpp  trid_strided_multidim_pcr_mpi.hpp  trid_thomaspcr_small.h
scalar/src/cuda/generics/generics/: shfl.h
scalar/test/: CMakeLists.txt  catch_mpi_main.cpp  cuda_mpi_wrappers.hpp  cuda_utils.hpp  gen_testcases.py  test_cpu.cpp  test_cpu_mpi.cpp  test_cuda.cu  test_cuda_mpi.cu  utils.hpp
